samples/_failures_safe/1761195797_b0daba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b78a750b.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_b78a750b.c:143:11: error: expected ‘;’ at end of input
  143 |     result
      |           ^
      |           ;
./samples/SAFE/__tmp_b78a750b.c:143:5: error: expected declaration or statement at end of input
  143 |     result
      |     ^~~~~~
